[package]
name = "rustphantompurger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
statrs = "0.16"
itertools="0.12.1"
bustools = { path = "/home/michi/Dropbox/rustbustools" }
# bustools ="0.11.0"
flate2 = "1"
serde = "1"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
