[package]
name = "rustphantompurger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
statrs = "0.17"
itertools="0.13"
bustools ="0.14"
flate2 = "1"
serde = "1"
polars = "0.41"

[dev-dependencies]
insta = { version = "1.39", features = ["yaml", "redactions"] }
